--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Config File
+config.json
+config.py
+
+#MacOS FileSystem files
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
